--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     font-family: 'Dancing Script', cursive
 }
 
+.card {
+    width: 18rem;
+}
+
 #page-title {
     padding: 0 0.25em;
     background-color: #fff;
