--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     z-index: 999;
 }
 
+#favoritsGalleryBlock {
+    max-width: 960px;
+    margin: auto;
+}
+
 @media screen and (max-width: 600px) {
     #page-title {
         font-size: 2em;
