--- a/style.css
+++ b/style.css
@@ -24,10 +24,12 @@
     z-index: 999;
 }
 
+/*
 #favoritsGalleryBlock {
     max-width: 960px;
     margin: auto;
 }
+*/
 
 @media screen and (max-width: 600px) {
     #page-title {
