Increased modal size

--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-.dancing-script{font-family:"Dancing Script",cursive}.card{width:18rem}.card.wide-card{width:24rem}.card .carousel{width:256px;margin:auto}#page-title{padding:0 .25em;background-color:#fff;border-radius:.5em;opacity:.5;font-size:5em;z-index:999}@media screen and (max-width: 600px){#page-title{font-size:2em}}/*# sourceMappingURL=style.css.map */
+.dancing-script{font-family:"Dancing Script",cursive}.card{width:18rem}.card.wide-card{width:24rem}.card .carousel{width:256px;margin:auto}/*# sourceMappingURL=style.css.map */
